language/move-lang/tests/move_check/borrows/dereference_full_invalid.exp
error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/dereference_full_invalid.move:13:9
   │
12 │         let y = copy x;
   │                 ------ It is still being mutably borrowed by this reference
13 │         *x;
   │         ^^ Invalid dereference.

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/dereference_full_invalid.move:18:9
   │
17 │         let y = id_mut(x);
   │                 --------- It is still being mutably borrowed by this reference
18 │         *x;
   │         ^^ Invalid dereference.

